2017-10-16  Bruno Haible  <bruno@clisp.org>

	Avoid a crash of the highest bit number test on Linux/arm.
	* m4/mmap.m4 (CL_MMAP): On arm systems, test address 0x41000000 instead
	of address 0x40000000.
	* aclocal.m4, src/configure: Regenerated.

2017-10-16  Bruno Haible  <bruno@clisp.org>

	Avoid another risky optimization when --enable-portability is enabled.
	* lispbibl.d: When NO_SYMBOLFLAGS is defined, don't use symbolflags.
	* makemake.in (XCFLAGS): Add -DNO_SYMBOLFLAGS if --enable-portability
	is specified.

2017-10-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/s390x.
	* makemake.in: When compiling lisparit.c with GCC for s390x, reduce
	optimizations.

2017-10-15  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/sparc64.
	* makemake.in: When compiling eval.c with GCC for sparc64, disable
	optimizations.

2017-10-15  Bruno Haible  <bruno@clisp.org>

	Avoid another dangerous code when --enable-portability is enabled.
	* eval.d (closure_register, byteptr_register): Don't define if NO_ASM is
	defined.

2017-10-15  Bruno Haible  <bruno@clisp.org>

	Improve code structure.
	* lispbibl.d: Reorder a #if cascade.

2017-10-14  Bruno Haible  <bruno@clisp.org>

	Use only mappable addresses in TRIVIALMAP_MEMORY.
	* lispbibl.d (TRIVIALMAP_MEMORY): Don't enable if
	MAPPABLE_ADDRESS_RANGE_START or MAPPABLE_ADDRESS_RANGE_END are not
	defined.
	* spvw.d (init_memory) [TRIVIALMAP_MEMORY]: Obey
	MAPPABLE_ADDRESS_RANGE_START and MAPPABLE_ADDRESS_RANGE_END. Remove the
	previous unreliable heuristics.

2017-10-14  Bruno Haible  <bruno@clisp.org>

	Simplify makemake.in.
	* makemake.in (echotabpipe): Remove function. Use 'echotab' instead.

2017-10-14  Bruno Haible  <bruno@clisp.org>

	Make genclisph check for errors on its output files.
	* genclisph.d: Take the header output file as first argument. The
	test output file is no longer optional. Check fclose result on all
	output streams. Emit logging output to stdout, not stderr.